--- a/src/components/CharacterForm/CharacterForm.css
+++ b/src/components/CharacterForm/CharacterForm.css
@@ -1,17 +1,31 @@
 .bg-white {
   width: 100%;
-  background-color: white;
+  background-image: url("../../assets/img/wow-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 50px;
+  height: auto;
 }
 
 .centralized {
   width: 800px;
   margin: 0 auto;
-  text-align: center;
-  background-color: #dedede;
   height: 100%;
 }
 
 .form-bg {
   padding: 50px;
+}
+
+.search-input input {
+  border: 1px solid #dedede;
+  font-size: 16px;
+  width: 200px;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+button {
+  width: 150px;
+  
 }
