--- a/src/components/CharacterInfo/CharacterInfo.css
+++ b/src/components/CharacterInfo/CharacterInfo.css
@@ -1,3 +1,17 @@
-.character {
+.character-form {
+  color: white;
+}
+
+.character-info {
+  text-align: left;
+}
+
+img {
+  display: block;
   margin: 0 auto;
+}
+
+h1 {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  letter-spacing: 1px;
 }
