--- a/src/client/app/components/CharacterForm/CharacterForm.scss
+++ b/src/client/app/components/CharacterForm/CharacterForm.scss
@@ -1,6 +1,6 @@
 .bg-white {
   width: 100%;
-  background-image: url("../../assets/img/wow-bg.jpg");
+  // background-image: url("../../assets/img/wow-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 50px;
@@ -13,7 +13,7 @@
   height: 100%;
 }
 
-.form-bg {
+.formBg {
   padding: 50px;
 }
 
@@ -23,8 +23,4 @@
   width: 200px;
   border-radius: 3px;
   padding: 5px;
-}
-
-button {
-  width: 150px;
 }
