--- a/src/client/app/components/CharacterForm/CharacterForm.scss
+++ b/src/client/app/components/CharacterForm/CharacterForm.scss
@@ -13,14 +13,34 @@
   height: 100%;
 }
 
-.formBg {
-  padding: 50px;
+.searchContainer {
+  height: 40px;
+  position: relative;
+  input {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    padding-left: 24px;
+    &:active {
+      background-color: white;
+    }
+  }
+  .searchIcon {
+    color: #aaa;
+    cursor: pointer;
+    position: absolute;
+    left: 6px;
+    top: 11px;
+  }
 }
 
-.search-input input {
-  border: 1px solid #dedede;
-  font-size: 16px;
-  width: 200px;
-  border-radius: 3px;
-  padding: 5px;
+.searchInput {
+  border-color: #31575a;
+  font-size: 12px;
+  border: 1px solid #d8dde6;
+  border-radius: 4px;
+  padding: 0px 12px 0 9px;
+  &.focus {
+    background-color: white;
+  }
 }
