--- a/src/client/app/components/commons/Button/Button.scss
+++ b/src/client/app/components/commons/Button/Button.scss
@@ -17,6 +17,14 @@
   position: relative;
 }
 
+.primary {
+  background-color: #3FD0C5;
+  color: white;
+  &:hover {
+    background-color: desaturate(#3FD0C5, 15%);
+  }
+}
+
 .fluid {
   width: 100%;
 }
