--- a/src/client/app/components/CharacterInfo/CharacterInfo.scss
+++ b/src/client/app/components/CharacterInfo/CharacterInfo.scss
@@ -6,11 +6,16 @@
 }
 
 .characterInfo {
+  font-family: 'Open Sans', sans-serif;
   text-align: left;
   color: white;
   position: relative;
   float: left;
   margin-left: 10px;
+  .charText {
+    padding: 5px;
+    font-size: 13px;
+  }
 }
 
 
@@ -22,14 +27,4 @@
   img {
     width: 100%;
   }
-}
-
-h3 {
-  margin: 0;
-  font-size: 13px;
-}
-
-h1 {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  letter-spacing: 1px;
 }
