--- a/src/client/app/components/CharacterForm/CharacterForm.scss
+++ b/src/client/app/components/CharacterForm/CharacterForm.scss
@@ -1,8 +1,6 @@
 .bg-white {
   width: 100%;
-  // background-image: url("../../assets/img/wow-bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: white;
   padding-top: 50px;
   height: auto;
 }
@@ -11,6 +9,7 @@
   width: 800px;
   margin: 0 auto;
   height: 100%;
+  background-color: #4f4b49;
 }
 
 .searchContainer {
