--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -1,5 +1,54 @@
+ul {
+  padding: 0;
+}
+
 .raid {
   padding: 27px 0 30px 0;
   float: left;
   width: 100%;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  float: left;
+  background-color: #353535;
+}
+
+.detail {
+  background-color: black;
+  padding: 5px;
+  .title {
+    text-align: left;
+    width: 266px;
+    float: left;
+  }
+  .progress {
+    text-align: center;
+    width: 266px;
+    float: left;
+  }
+  .boss {
+    text-align: center;
+  }
+}
+
+.difficulty {
+  width: 266px;
+  text-align: left;
+  float: left;
+  ul li {
+    padding: 5px;
+    list-style-type: none;
+  }
+}
+
+.bossKills {
+  float: right;
+  ul li {
+    padding: 5px;
+    list-style-type: none;
+  }
 }
