Stylized boss card, sorta

--- a/src/client/app/components/RaidProgression/BossCard/BossCard.scss
+++ b/src/client/app/components/RaidProgression/BossCard/BossCard.scss
@@ -3,6 +3,9 @@
     border-radius: 2px;
     padding: 16px;
     background-color: #414243;
-    min-height: 170px;
     color: #606060;
+  }
+
+  .boss-name {
+    color: #ffffff;
   }
