--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -17,43 +17,19 @@ ul {
   background-color: #353535;
 }
 
+.table-details {
+  color: #b54747;
+  width: 100%;
+  .table-head {
+    width: 15rem;
+    text-align: left;
+  }
+  .table-center {
+    text-align: center;
+  }
+}
+
 .detail {
   background-color: black;
   padding: 5px;
-  .title {
-    text-align: left;
-    width: 266px;
-    float: left;
-  }
-  .progress {
-    text-align: center;
-    width: 266px;
-    float: left;
-  }
-  .boss {
-    text-align: center;
-  }
-}
-
-.raidContent {
-  width: 100%;
-  float: left;
-}
-
-.difficulty {
-  width: 266px;
-  text-align: left;
-  float: left;
-  ul li {
-    padding: 5px;
-    list-style-type: none;
-  }
-}
-
-.bossKills {
-  float: right;
-  ul li {
-    padding: 5px;
-    list-style-type: none;
-  }
 }
