additional styling on boss card

--- a/src/client/app/components/RaidProgression/BossCard/BossCard.scss
+++ b/src/client/app/components/RaidProgression/BossCard/BossCard.scss
@@ -33,4 +33,12 @@
 
 td {
   padding: 5px;
+  position: relative;
+}
+
+.name {
+  padding-left: 10px;
+  top: 50%;
+  position: absolute;
+  transform: translateY(-50%);
 }
