--- a/src/client/app/components/commons/Button/Button.scss
+++ b/src/client/app/components/commons/Button/Button.scss
@@ -18,10 +18,10 @@
 }
 
 .primary {
-  background-color: #3FD0C5;
+  background-color: #039300;
   color: white;
   &:hover {
-    background-color: desaturate(#3FD0C5, 15%);
+    background-color: desaturate(#039300, 15%);
   }
 }
 
