--- a/src/client/app/components/CharacterForm/CharacterForm.scss
+++ b/src/client/app/components/CharacterForm/CharacterForm.scss
@@ -1,7 +1,6 @@
 .bg-white {
   width: 100%;
-  background-color: white;
-  padding-top: 50px;
+  background-color: #282828;
   height: auto;
 }
 
@@ -9,7 +8,11 @@
   width: 800px;
   margin: 0 auto;
   height: 100%;
-  background-color: #4f4b49;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-color: #2a2a2a;
+  border-width: 1px;
+  background-color: #3a3a3a;
 }
 
 .searchContainer {
