--- a/src/client/app/components/RaidProgression/BossCard/BossCard.scss
+++ b/src/client/app/components/RaidProgression/BossCard/BossCard.scss
@@ -13,6 +13,15 @@
   color: #ffffff;
 }
 
+.boss-progress {
+  text-align: center;
+}
+
+.boss-kills {
+  text-align: center;
+  padding-left: 50px;
+}
+
 .boss-pic {
   max-height: 200px;
   width: 100%;
