--- a/src/client/app/containers/App/App.scss
+++ b/src/client/app/containers/App/App.scss
@@ -1,21 +1,23 @@
-.App {
+.app {
   text-align: center;
+  background: #ccc;
 }
 
-.App-logo {
+.logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.header {
+  text-align: center;
+  background-color: #535353;
+  height: 100px;
+  padding-top: 20px;
   color: white;
 }
 
 
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
