--- a/src/client/app/components/CharacterForm/CharacterForm.scss
+++ b/src/client/app/components/CharacterForm/CharacterForm.scss
@@ -1,17 +1,15 @@
 .bg-white {
   width: 100%;
   background-color: #282828;
-  height: auto;
+  height: 100%;
 }
 
 .centralized {
   width: 800px;
   margin: 0 auto;
   height: 100%;
-  border-right-style: solid;
-  border-left-style: solid;
-  border-color: #2a2a2a;
-  border-width: 1px;
+  border-right: 1px solid #2a2a2a;
+  border-left: 1px solid #2a2a2a;
   background-color: #3a3a3a;
 }
 
