--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -18,20 +18,19 @@ ul {
 }
 
 .table-details {
+  border-collapse:collapse;
+  background-color: #353535;
   color: #FFF;
   width: 100%;
+  border: 2px solid black;
   .table-head {
-    color: #039300;
+    background-color: black;
+    padding: 8px;
     width: 15rem;
     text-align: left;
-    border-bottom: 1px solid #2a2a2a;
   }
   .table-center {
     text-align: center;
   }
-}
-
-.detail {
-  background-color: black;
-  padding: 5px;
+  td {padding: 8px;}
 }
