--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -17,6 +17,10 @@ ul {
   background-color: #353535;
 }
 
+.table-center {
+  text-align: center;
+}
+
 .table-details {
   border-collapse:collapse;
   background-color: #353535;
@@ -32,9 +36,17 @@ ul {
   .table-center {
     text-align: center;
   }
-  td {padding: 8px;}
+  td {
+    font-size: 13px;
+    padding: 8px;
+  }
 }
 
-.table-center {
-  text-align: center;
+.prog {
+  color: #b8b8b8;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 4px 8px;
+  border: 1px solid black;
+  background-color: black;
 }
