--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -1,20 +1,20 @@
+@import "../../mixins/variables";
+
 ul {
   padding: 0;
 }
 
 .raid {
-  padding: 27px 0 30px 0;
   float: left;
   width: 100%;
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $defaultFont;
 }
 
 .content {
   width: 100%;
-  height: 100%;
   float: left;
-  background-color: #353535;
+  background-color: #45354a;
 }
 
 .table-center {
@@ -23,12 +23,12 @@ ul {
 
 .table-details {
   border-collapse:collapse;
-  background-color: #353535;
+  background-color: $darkerGrey;
   color: #FFF;
   width: 100%;
-  border: 2px solid black;
+  border: 2px solid $black;
   .table-head {
-    background-color: black;
+    background-color: $black;
     padding: 8px;
     width: 15rem;
     text-align: left;
@@ -47,6 +47,6 @@ ul {
   font-weight: 700;
   letter-spacing: 1px;
   padding: 4px 8px;
-  border: 1px solid black;
-  background-color: black;
+  border: 1px solid $black;
+  background-color: $black;
 }
