--- a/src/client/app/mixins/_variables.scss
+++ b/src/client/app/mixins/_variables.scss
@@ -1,3 +1,8 @@
 $defaultColor: #dadada;
 $purple: #483754;
+$black: #000000;
 $white: #ffffff;
+$grey: #7d7d7d;
+$darkerGrey: #353535;
+
+$defaultFont: 'Open Sans', sans-serif;
