--- a/src/client/app/mixins/_variables.scss
+++ b/src/client/app/mixins/_variables.scss
@@ -4,5 +4,7 @@ $black: #000000;
 $white: #ffffff;
 $grey: #7d7d7d;
 $darkerGrey: #353535;
+$alliance: #69f;
+$horde: #e02929;
 
 $defaultFont: 'Open Sans', sans-serif;
