--- a/src/client/app/components/CharacterInfo/CharacterInfo.scss
+++ b/src/client/app/components/CharacterInfo/CharacterInfo.scss
@@ -19,7 +19,12 @@
     padding: 5px;
     font-size: 16px;
   }
-  .charName {
+  .horde {
+    padding-top: 5px;
+    font-size: 25px;
+    color: $horde;
+  }
+  .alliance {
     padding-top: 5px;
     font-size: 25px;
     color: $alliance;
