--- a/src/client/app/containers/App/App.scss
+++ b/src/client/app/containers/App/App.scss
@@ -1,5 +1,9 @@
 @import '../../mixins/variables';
 
+html { font-size: 62.5%; }
+body { font-size: 14px; font-size: 1.4rem; } /* =14px */
+h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
+
 .app {
   text-align: center;
   background: $purple;
@@ -8,5 +12,5 @@
 
 .header {
   height: 100px;
-  padding-top: 20px;  
+  padding-top: 20px;
 }
