--- a/src/client/app/components/CharacterInfo/CharacterInfo.scss
+++ b/src/client/app/components/CharacterInfo/CharacterInfo.scss
@@ -32,8 +32,22 @@
   height: 100px;
   float: left;
   position: relative;
-  img {
-    width: 100%;
+  .thumbnail {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border: 2px solid black;
+  }
+  .alliance {
+    box-shadow: 0px 0px 10px $alliance;
+  }
+  .horde {
+    box-shadow: 0px 0px 10px $horde;
   }
 }
 
