--- a/src/client/app/mixins/_variables.scss
+++ b/src/client/app/mixins/_variables.scss
@@ -7,4 +7,11 @@ $darkerGrey: #353535;
 $alliance: #69f;
 $horde: #e02929;
 
+$arialFont: 'Arial', sans-serif;
 $defaultFont: 'Open Sans', sans-serif;
+$ralewayFont: 'Raleway', sans-serif;
+$oswaldFont: 'Oswald', sans-serif;
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
+@import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
