styling and fixed split up bossCard components to multiple smaller components

--- a/src/client/app/components/LogsSection/BossCard/BossCard.scss
+++ b/src/client/app/components/LogsSection/BossCard/BossCard.scss
@@ -1,6 +1,10 @@
 .table-center {
   text-align: center;
-  ul {
-    list-style-type: none;
-  }
+}
+
+.name {
+  padding-left: 10px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
