--- a/src/client/app/components/LogsSection/LogsSection.scss
+++ b/src/client/app/components/LogsSection/LogsSection.scss
@@ -5,6 +5,11 @@
   margin: 0 auto;
 }
 
+.boss-pic {
+  width: 50px;
+  height: 50px;
+}
+
 .table-details {
   border-collapse: collapse;
   background-color: $darkerGrey;
@@ -31,6 +36,7 @@
   background-color: $purple;
   padding: 3px;
   display: inline-block;
+  margin-left: -2px;
   &:hover {
     background-color: $purple;
     cursor: pointer;
