added warcraft percentile color theme

--- a/src/client/app/mixins/_variables.scss
+++ b/src/client/app/mixins/_variables.scss
@@ -12,6 +12,16 @@ $defaultFont: 'Open Sans', sans-serif;
 $ralewayFont: 'Raleway', sans-serif;
 $oswaldFont: 'Oswald', sans-serif;
 
+// warcraft logs percentile colors
+$common: #666 !important;
+$uncommon: rgb(30, 255, 0) !important;
+$rare: rgb(0, 112, 255) !important;
+$epic: rgb(163, 53, 238) !important;
+$legendary: rgb(255, 128, 0) !important;
+$artifact: rgb(229, 204, 128) !important;
+
+
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
 @import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
