Revert "Feature/warcraft logs"

--- a/src/client/app/components/RaidProgression/RaidProgression.scss
+++ b/src/client/app/components/RaidProgression/RaidProgression.scss
@@ -18,6 +18,10 @@ ul {
   background-color: #45354a;
 }
 
+.table-center {
+  text-align: center;
+}
+
 .table-details {
   border-collapse:collapse;
   background-color: $darkerGrey;
@@ -36,9 +40,6 @@ ul {
   td {
     font-size: 1.3rem;
     padding: 8px;
-  }
-  .pointer {
-    cursor: pointer;
   }
 }
 
