--- a/src/client/app/components/LogsSection/LogsSection.scss
+++ b/src/client/app/components/LogsSection/LogsSection.scss
@@ -5,50 +5,33 @@
   margin: 0 auto;
 }
 
-.boss-pic {
-  width: 50px;
-  height: 50px;
+.table-center {
+  text-align: center;
 }
 
 .table-details {
   border-collapse: collapse;
   background-color: $darkerGrey;
-  color: $white;
+  color: #FFF;
   width: 100%;
   border: 2px solid $black;
   .table-head {
     background-color: $black;
     padding: 8px;
-    width: 15rem;
     text-align: left;
   }
-  .table-center {
-    text-align: center;
-  }
-  td {
-    font-size: 1.3rem;
-    padding: 8px;
-  }
 }
-
-.toggled {
+.selected {
   border: 1px solid $white;
-  background-color: $purple;
-  padding: 3px;
+  background-color: red;
   display: inline-block;
-  margin-left: -2px;
-  &:hover {
-    background-color: $purple;
-    cursor: pointer;
-  }
 }
-
 .difficulty-tab {
-  border: 1px solid $black;
+  border: 1px solid #555555;
   padding: 3px;
   display: inline-block;
   &:hover {
     cursor: pointer;
-    background-color: $purple;
+    background-color: $grey;
   }
 }
