--- a/src/client/app/containers/App/App.scss
+++ b/src/client/app/containers/App/App.scss
@@ -7,11 +7,24 @@ body {
   background: $purple;
   margin: 0;
 }
-h1 {
-  font-size: 24px;
-  font-size: 2.4rem; /* =24px */
-}
+// h1 {
+//   font-size: 24px;
+//   font-size: 2.4rem; /* =24px */
+// }
 .app {
   background: $purple;
   font-family: $defaultFont;
+}
+
+.header {
+  color: $white;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  background-color: #342335;
+  h1 {
+    font-size: 2.0rem;
+    margin: 0;
+    font-family: $ralewayFont;
+  }
 }
