installed react loader spinners

--- a/src/client/app/components/Navbar/Navbar.scss
+++ b/src/client/app/components/Navbar/Navbar.scss
@@ -15,6 +15,16 @@
   background-color: $purple;
 }
 
+.spinner {
+  margin: 0 auto;
+  width: 800px;
+  top: 50%;
+}
+
+.bodyContainer {
+  height: 100%;
+}
+
 .searchContainer {
   height: 40px;
   width: 800px;
